--- a/index.html
+++ b/index.html
@@ -80,10 +80,11 @@
                       <li>height: ???</li>
                       <li>weight: ???</li>
                       <li>foot size: 25cm</li>
+                      <li>※一番左です</li>
                     </ul>
                   </div>
                   <div class="col-sm-6 order-sm-1 pl-5 pr-0 pt-5 mt-5">
-                    <img src="img/phone.png" class="w-75 rounded-circle" alt="">
+                    <img src="img/me.jpg" class="w-75 rounded-circle" alt="">
                   </div>
                 </div>
 
@@ -94,7 +95,7 @@
 
           <!-- Button trigger modal -->
           <!-- 趣味 -->
-          <button type="button" class="btn btn-danger col-4 rounded-circle" data-toggle="modal" data-target="#hobby">
+          <button type="button" class="btn btn-light col-4 rounded-circle " data-toggle="modal" data-target="#hobby">
             趣味
           </button>
 
@@ -124,7 +125,7 @@
 
           <!-- Button trigger modal -->
           <!-- 経歴 -->
-          <button type="button" class="btn btn-success col-4 rounded-circle" data-toggle="modal" data-target="#career">
+          <button type="button" class="btn btn-light col-4 rounded-circle" data-toggle="modal" data-target="#career">
             経歴
           </button>
 
@@ -156,7 +157,7 @@
         <div class="row py-4 text-center myStyle">
           <!-- Button trigger modal -->
           <!-- 目標 -->
-          <button type="button" class="btn btn-warning col-4 rounded-circle" data-toggle="modal" data-target="#goal" style="width: 40%;">
+          <button type="button" class="btn btn-light col-4 rounded-circle" data-toggle="modal" data-target="#goal" style="width: 40%;">
             目標
           </button>
 
@@ -184,7 +185,7 @@
 
           <!-- Button trigger modal -->
           <!-- ギャラリー -->
-          <button type="button" class="btn btn-secondary col-4 rounded-circle" data-toggle="modal"
+          <button type="button" class="btn btn-light col-4 rounded-circle" data-toggle="modal"
             data-target="#gallry">
             ギャラリー
           </button>
@@ -223,6 +224,10 @@
                       <div class="carousel-item">
                         <img class="carousel-item01" src="img/aiuka-6xmb94.png">
                       </div>
+
+                      <div class="carousel-item">
+                        <img class="carousel-item01" src="img/IMG_4918.JPG">
+                      </div>
                     </div>
 
                     <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
@@ -243,7 +248,7 @@
 
           <!-- Button trigger modal -->
           <!-- ひとこと -->
-          <button type="button" class="btn btn-primary col-4 rounded-circle" data-toggle="modal" data-target="#comment">
+          <button type="button" class="btn btn-light col-4 rounded-circle" data-toggle="modal" data-target="#comment">
             ひとこと
           </button>
 
@@ -326,19 +331,3 @@
 
 </html>
 
-
-
-
-<!-- <button type="button" class="btn btn-primary">Primary</button>
-
-    <div class="row mb-3">
-      <div class="col-lg-2 col-md-6 " style="background-color:red; height: 500px;">Red</div>
-      <div class="col-lg-8 col-md-2 col-12" style="background-color:blue;height: 500px;">Blue</div>
-      <div class="col-lg-2 col-md-4 col-12" style="background-color:yellow; height: 500px;">Yellow</div>
-  </div>
-
-    <div class="row">
-      <div class="col-lg-12 col-md-6 col-12" style="background-color:red;">Red</div>
-      <div class="col-lg-12 col-md-2 col-12" style="background-color:blue;">Blue</div>
-      <div class="col-lg-12 col-md-4 col-12" style="background-color:yellow;">Yellow</div>
-  </div> -->
